[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["Ludger Heide <ludger.heide@lhtechnologies.de>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
fairscale = "^0.4.13"
fire = "^0.5.0"
sentencepiece = "^0.1.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
